# glitchgan

./: .gitignore  MODEL_CARD.md  README.md  back_up_utils.py  calculated_second_derivs.ipynb  environment.yml  evaluation.ipynb  glitchgan_evaluation.ipynb  history.json  model_components.py  pyproject.toml  train_gan.py  umap_gspy_cdvgan.ipynb
.github/workflows/: publish.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/guides/: installation.rst  overview.rst  quickstart.rst  training.rst
models/: README.md
notebooks/: evaluation.ipynb  evaluation2.ipynb  gspy_classification.ipynb  inject_into_detector_noise.ipynb
scripts/: convert_keras2_to_keras3.py  convert_tf_generator.py  setup_local.sh
src/cdvgan/: __init__.py  gan_models.py  model_components.py  train.py  utils.py
src/cdvgan/tf/: __init__.py  gan_models.py  model_components.py  train.py  utils.py
src/glitchgan/: __init__.py  _version.py  glitchgan.py  utils.py
src/glitchgan/tf/: __init__.py  gan_models.py  model_components.py  train.py  utils.py
tensorflow_reference/: gan_models.py  model_components.py  train_gan.py  train_gan_save.py  utils.py
tests/: conftest.py  test_glitchgan.py  test_snr.py
weights/pytorch/: README.md
