[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "glitchgan"
dynamic = ["version"]
description = "Synthetic LIGO gravitational-wave glitch generator (cDVGAN architecture)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Tom Dooney", email = "tom.dooney95@gmail.com"}]
requires-python = ">=3.10,<3.13"
keywords = ["gravitational-waves", "LIGO", "GAN", "glitch", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.9",
    "huggingface_hub>=0.23",
    "tensorflow>=2.16",
    "keras>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
docs = [
    "sphinx>=7",
    "sphinx-autoapi>=3",
    "furo>=2024.1.29",
    "myst-parser>=3",
    "nbsphinx>=0.9",
]
all = ["glitchgan[dev,docs]"]

[project.urls]
Repository    = "https://github.com/tomdooney95/glitchgan"
Documentation = "https://glitchgan.readthedocs.io/"

[project.scripts]
glitchgan-train    = "glitchgan.tf.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/glitchgan/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=glitchgan --cov-report=term-missing"
